# SwiftNode

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
swiftnode/: __init__.py  cli.py  config.py
swiftnode/bot/: __init__.py  discord_bot.py  telegram_bot.py  whatsapp_bot.py
swiftnode/core/: __init__.py  agent.py  memory.py  prompt.py
swiftnode/multi_device/: __init__.py  client.py  server.py
swiftnode/tools/: __init__.py  adb.py  code.py  extras.py  files.py  network.py  system.py  web.py
swiftnode/ui/: __init__.py  setup.py
